--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,16 @@
   "manifest_version": 2,
   "description": "traceparent header extension",
   "permissions": [
-    "<all_urls>","webRequest","webRequestBlocking"
+    "<all_urls>",
+    "webRequest",
+    "webRequestBlocking",
+    "storage"
   ],
   "background": {
     "scripts": [
       "index.js"
     ],
     "persistent": true
-  }
+  },
+  "options_page": "options.html"
 }
