--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,8 @@
     ],
     "persistent": true
   },
-  "options_page": "options.html"
+  "options_page": "options.html",
+  "browser_action": {
+    "default_popup": "popup.html"
+  }
 }
