--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,6 @@
   "options_page": "options.html",
   "action": {
     "default_popup": "popup.html",
-    "default_icon": "img/off_icon.png"
+    "default_icon": "img/default_icon.png"
   }
 }
